Fix header title and brand alignment

--- a/src/erben.sitetheme/erben/sitetheme/resources/less/application.less
+++ b/src/erben.sitetheme/erben/sitetheme/resources/less/application.less
@@ -144,6 +144,10 @@ input.context {
 }
 
 
+.app-sidebar {
+  padding: @line-height-computed 0;
+}
+
 // Some eample styles for portlets
 
 .portlet {
@@ -243,7 +247,7 @@ body > footer {
   #brandname {
     background:url(../assets/img/badge.png) no-repeat 0 0 transparent;
     display: block;
-    .size(340px, 245px);
+    .size(331px, 229px);
     position:absolute;
     z-index: 1;
     text-indent: -3000px;
